--- a/anto-config-one/src/main/resources/application-prod.properties
+++ b/anto-config-one/src/main/resources/application-prod.properties
@@ -1,3 +1,26 @@
-server.port=11111
+server.port=8088
 
-profile = prod_environment
+name=prod_name
+address=prod_address
+
+
+iam.username=prod_Janita
+iam.age=10
+
+
+#redis
+spring.redis.database=1
+spring.redis.host=192.168.36.99
+spring.redis.password=huizhi
+spring.redis.port=6379
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=1
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+
+
+#Êý¾Ý¿â
+spring.datasource.url=jdbc:mysql://192.168.33.99:3306/book?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=huizhi
+spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
