--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
 		</dependencies>
 
 	</dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
